--- a/.github/workflows/main_touristguidedel3.yml
+++ b/.github/workflows/main_touristguidedel3.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
   workflow_dispatch:
+  
+  pull_request:
+    branches:
+      - main  # Triggeres når en PR oprettes eller opdateres mod main
 
 jobs:
   build:
