--- a/.github/workflows/main_touristguidedel3.yml
+++ b/.github/workflows/main_touristguidedel3.yml
@@ -15,7 +15,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
+    permissions:      contents: read
+      checks: write
+      pull-requests: write  # Nødvendigt for at poste Surefire rapport til PR
       contents: read # Required for actions/checkout
 
     steps:
